[Changes for 0.64 - Sun,  9 May 2010 00:50:11 +0200]

* Avoid creating gnupg configuration files for the user invoking Makefile.PL
  (Closes RT#41978).
* Correctly detect the version of gnupg on cygwin and add tests for it
  (Paul Fenwick) (Closes RT#39258).

[Changes for 0.63 - Sun, 28 Mar 2010 04:46:27 +0100]

* Fix diagnostic message from Makefile.PL when the user dosn't have gnupg or
  Crypt::OpenPGP (miyagawa).

[Changes for 0.62 - Tue, 23 Mar 2010 22:17:39 +0100]

* Change the default keyserver from the outdated pgp.mit.edu to
  pool.sks-keyservers.net.

[Changes for 0.61 - 2009年11月19日 周四 00時56分41秒 CST]

* Added "=encoding utf8" to POD to fix author name display.
  No functional changes.

[Changes for 0.60 - 2009年11月16日 周一 22時48分54秒 CST]

* LICENSING CHANGE: This compilation and all individual files in it
  are now under the nullary CC0 1.0 Universal terms:

  To the extent possible under law, 唐鳳 has waived all copyright and
  related or neighboring rights to Module-Signature.

* Updated Module::Install to 0.91, prompted by Florian Ragwitz.

[Changes for 0.55 - 2006-07-29]

* ANDK submitted a patch to fix versioning problem when
  the user elects to install Crypt::OpenPGP.

* Major refactoring of the Makefile.PL to ease the installation process.

[Changes for 0.54 - 2006-05-12]

* Fixed a long-standing bug where differing end-of-line conventions
  could cause bogus comparisons in signature checks.

* Fixed another long-standing bug where CRLF text files were hashed
  into different digests under Unix and Dosish platforms.  Now it's
  consistently hashed as if it's been normalized to LF.

* Optional dependencies are no longer installed-by-default.

[Changes for 0.53 - 2006-01-31]

* The explicit call to "readline(D)" didn't compile on earlier perls which
  demanded either "readline(*D)" or "<D>" -- I elected the latter form.
  Reported by: Matthew Persic

* Update my author key to reflect revoked past uids.

[Changes for 0.52 - 2006-01-19]
